...
        let beatString = String(UserDefaults.standard.string(forKey: "beat") ?? "4")
        pickerView.delegate = self
        pickerView.dataSource = self
        //pickerView.selectRow(60, inComponent: 0, animated: false)
        pickerView.selectRow(Int(bpmString)! - 60, inComponent: 0, animated: false)
        pickerView.selectRow(Int(beatString)! / 4 - 1, inComponent: 1, animated: false)
        pickerView.accessibilityIdentifier = "picker"
        pickerView.isAccessibilityElement = true

        let toolbar = UIToolbar(frame:CGRect(x: 0, y: UIScreen.main.bounds.size.height, width:UIScreen.main.bounds.size.width, height: UIScreen.main.bounds.size.width / 4))
        let doneItem = UIBarButtonItem(barButtonSystemItem: .done, target: self, action: #selector(self.done))
        doneItem.accessibilityIdentifier = "done"
        toolbar.setItems([doneItem], animated: true)
        self.BPMTextField.inputView = pickerView
        self.BPMTextField.inputAccessoryView = toolbar
        
        self.beatTextField.inputView = pickerView
        self.beatTextField.inputAccessoryView = toolbar
...
